--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
             opacity: 0.6;
             pointer-events: none;
         }
-        .btn-gradient-warm{
-            color: white;
-            background: linear-gradient(to right,#d24d4e, #6f7bce); /* 加深颜色 */
-        }
-        .btn-gradient-warm:hover{
-            opacity: 0.8;
-            transition: 0.3s;
-        }
+.btn-gradient-warm {
+    color: white; /* 文字颜色改为纯白 */
+    background: linear-gradient(to right, #d9534f, #5d78d1); /* 按钮颜色稍微变浅 */
+}
+.btn-gradient-warm:hover {
+    opacity: 0.85;
+    transition: 0.3s;
+}
+
         .btn i{
             margin-right: 5px;
         }
@@ -158,10 +159,9 @@
                 opacity: 100%;
             }
         }
-
         /* 放大 GitHub 图标 */
         #contact-info img {
-            width: 50px; /* 放大图标 */
+            width: 50px;
         }
     </style>
 </head>
@@ -204,8 +204,6 @@
     </div>
     
     <footer>
-        <p class="tips">© 2025 SwiftWings科技有限公司 | <a href="#" class="link">隐私政策</a></p>
+        <p class="tips">© 2025 SwiftWings科技有限公司 | <a href="https://tarnimawa.github.io/用户服务协议.md" class="link" target="_blank">用户协议</a></p>
     </footer>
 </body>
-</html>
-
