--- a/index.html
+++ b/index.html
@@ -204,6 +204,6 @@
     </div>
     
     <footer>
-        <p class="tips">© 2025 SwiftWings科技有限公司 | <a href="https://tarnimawa.github.io/用户服务协议.md" class="link" target="_blank">用户协议</a></p>
+        <p class="tips">© 2025 SwiftWings科技有限公司 | <a href="https://tarnimawa.github.io/用户服务协议" class="link" target="_blank">用户协议</a></p>
     </footer>
 </body>
