--- a/index.html
+++ b/index.html
@@ -205,5 +205,6 @@
     
     <footer>
         <p class="tips">© 2025 SwiftWings科技有限公司 | <a href="https://tarnimawa.github.io/用户服务协议" class="link" target="_blank">用户协议</a></p>
+        <a href="https://icp.gov.moe/?keyword=20250169" target="_blank">萌ICP备20250169号</a>
     </footer>
 </body>
